// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home snapshot matches post-submit user 1`] = `
<DocumentFragment>
  <div
    class="Home grid-container margin-top-4"
  >
    <div
      class="grid-row grid-gap"
    >
      <div
        class="tablet:grid-col-8 margin-top-4"
      >
        <h1
          class="margin-top-0"
        >
          Hello Voldy!
        </h1>
        <p>
          The Office of Early Childhood’s ECE Reporter is an easy and secure way for you to submit state-funded child enrollment data every month. You can use it to track all new enrollments and withdrawals and changes to age group, site, and funding.
        </p>
        <h2
          class="pre-submit-h2"
        >
          Your managed sites and funding spaces
        </h2>
      </div>
      <div
        class="tablet:grid-col-4 margin-top-4 img"
        role="presentation"
      >
        <svg>
          PersonWithSpreadsheet.svg
        </svg>
      </div>
    </div>
    <div
      class="usa-alert usa-alert--info grid-row"
    >
      <div
        class="display-flex flex-fill"
      >
        <div
          class="usa-alert__body grid-col flex-fill"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              Are your sites and/or funding spaces incorrect? Reach out to the ECE Reporter team through 
              <a
                href="/revision"
              >
                this form.
              </a>
            </span>
          </p>
        </div>
        <div
          class="usa-alert__body flex-auto display-flex flex-align-center"
        />
      </div>
    </div>
    <div
      class="margin-top-3 margin-bottom-1"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="grid-row grid-gap"
    >
      <div
        class="tablet:grid-col-10"
      >
        <h2>
          Mort School For Dark-Inclined Wizards
        </h2>
        <p
          class="font-body-lg text-base-darker"
        >
          undefined active enrollments across 3 sites
        </p>
        <div
          class="display-inline-block"
        >
          <a
            class="bx--link usa-button"
            href="/create-record"
          >
            <span
              class="oec-text-with-icon"
            >
              <svg
                class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                data-icon="plus-circle"
                data-prefix="fas"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  fill="currentColor"
                />
              </svg>
              Add a record
            </span>
          </a>
        </div>
      </div>
      <div
        class="margin-top-4 tablet:grid-col-2"
      >
        <a
          class="bx--link usa-button usa-button--unstyled"
          href="/roster"
        >
          <span
            class="oec-text-with-icon text-underline"
          >
            View roster
            <svg
              class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
              fill="currentColor"
              stroke="currentColor"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <div
      class="margin-top-4 margin-bottom-4"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <h3
      class="pre-submit-h3"
    >
      Sites
    </h3>
    <ul
      class="margin-left-2 bx--list--unordered"
    >
      <li
        class="line-height-body-4 bx--list__item"
      >
        Students of Salazaar
      </li>
      <li
        class="line-height-body-4 bx--list__item"
      >
        Karkaroff Kids
      </li>
      <li
        class="line-height-body-4 bx--list__item"
      >
        Nocturn Alley Nargles
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Home snapshot matches pre-submit user 1`] = `
<DocumentFragment>
  <div
    class="Home grid-container margin-top-4"
  >
    <div
      class="usa-alert usa-alert--warning grid-row"
    >
      <div
        class="display-flex flex-fill"
      >
        <div
          class="usa-alert__body grid-col flex-fill"
        >
          <h2
            class="usa-alert__heading"
          >
            Please update your roster by June 10
          </h2>
          <p
            class="usa-alert__text"
          >
            Once you have made updates to your roster, 
            <a
              href="/roster"
            >
              confirm
            </a>
             that your Jan - May data collection is complete.
          </p>
        </div>
        <div
          class="usa-alert__body flex-auto display-flex flex-align-center"
        />
      </div>
    </div>
    <div
      class="grid-row grid-gap"
    >
      <div
        class="tablet:grid-col-8 margin-top-4"
      >
        <h1
          class="margin-top-0"
        >
          Hello Voldy!
        </h1>
        <p>
          The Office of Early Childhood’s ECE Reporter is an easy and secure way for you to submit state-funded child enrollment data every month. You can use it to track all new enrollments and withdrawals and changes to age group, site, and funding.
        </p>
        <h2
          class="pre-submit-h2"
        >
          Your managed sites and funding spaces
        </h2>
      </div>
      <div
        class="tablet:grid-col-4 margin-top-4 img"
        role="presentation"
      >
        <svg>
          PersonWithSpreadsheet.svg
        </svg>
      </div>
    </div>
    <div
      class="usa-alert usa-alert--info grid-row"
    >
      <div
        class="display-flex flex-fill"
      >
        <div
          class="usa-alert__body grid-col flex-fill"
        >
          <p
            class="usa-alert__text"
          >
            <span>
              Are your sites and/or funding spaces incorrect? Reach out to the ECE Reporter team through 
              <a
                href="/revision"
              >
                this form.
              </a>
            </span>
          </p>
        </div>
        <div
          class="usa-alert__body flex-auto display-flex flex-align-center"
        />
      </div>
    </div>
    <div
      class="margin-top-3 margin-bottom-1"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="grid-row grid-gap"
    >
      <div
        class="tablet:grid-col-10"
      >
        <h2>
          Mort School For Dark-Inclined Wizards
        </h2>
        <p
          class="font-body-lg text-base-darker"
        >
          undefined active enrollments across 3 sites
        </p>
        <div
          class="display-inline-block"
        >
          <a
            class="bx--link usa-button"
            href="/create-record"
          >
            <span
              class="oec-text-with-icon"
            >
              <svg
                class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-left"
                data-icon="plus-circle"
                data-prefix="fas"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  fill="currentColor"
                />
              </svg>
              Add a record
            </span>
          </a>
        </div>
      </div>
      <div
        class="margin-top-4 tablet:grid-col-2"
      >
        <a
          class="bx--link usa-button usa-button--unstyled"
          href="/roster"
        >
          <span
            class="oec-text-with-icon text-underline"
          >
            View roster
            <svg
              class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-right oec-text-with-icon__icon--side-right"
              fill="currentColor"
              stroke="currentColor"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <div
      class="margin-top-4 margin-bottom-4"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <h3
      class="pre-submit-h3"
    >
      Sites
    </h3>
    <ul
      class="margin-left-2 bx--list--unordered"
    >
      <li
        class="line-height-body-4 bx--list__item"
      >
        Students of Salazaar
      </li>
      <li
        class="line-height-body-4 bx--list__item"
      >
        Karkaroff Kids
      </li>
      <li
        class="line-height-body-4 bx--list__item"
      >
        Nocturn Alley Nargles
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Home snapshot matches revise site request form 1`] = `
<DocumentFragment>
  <div
    class="grid-container margin-top-4"
  >
    <button
      class="usa-button usa-button--unstyled margin-top-2 text-bold bx--btn bx--btn--primary"
      tabindex="0"
      type="button"
    >
      <span
        class="oec-text-with-icon"
      >
        <svg
          class="oec-text-with-icon__icon oec-text-with-icon__icon--direction-left oec-text-with-icon__icon--side-left"
        >
          arrowRight.svg
        </svg>
        Back
      </span>
    </button>
    <h1>
      Request site and funding changes
    </h1>
    <p>
      The ECE Reporter team will review any requested updates made in this form. Any updates or follow-up questions will be sent to the email associated with your ECE Reporter account.
    </p>
    <h2>
      Managed sites
    </h2>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4 text-bold"
      >
        Site name
      </div>
      <div
        class="tablet:grid-col-3 text-bold"
      >
        Request site name changes
      </div>
      <div
        class="tablet:grid-col-3 text-bold"
      >
        Request removal from your account
      </div>
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Students of Salazaar
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Students of Salazaar-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Students of Salazaar-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Students of Salazaar-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Students of Salazaar-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Karkaroff Kids
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Karkaroff Kids-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Karkaroff Kids-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Karkaroff Kids-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Karkaroff Kids-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="grid-row grid-gap margin-bottom-1"
    >
      <div
        class="tablet:grid-col-4"
      >
        <p>
          Nocturn Alley Nargles
        </p>
        <p
          class="usa-hint"
        >
          <b>
            License #: 
          </b>
            Exempt  
          <b>
            NAEYC ID: 
          </b>
            None  
          <b>
            Registry ID: 
          </b>
            None 
        </p>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class=" usa-form-group"
        >
          <label
            class="usa-label"
            for="Nocturn Alley Nargles-rename"
          >
             
          </label>
          <input
            aria-required="true"
            class="usa-input oec-text-input"
            id="Nocturn Alley Nargles-rename"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="tablet:grid-col-3 display-flex flex-align-center"
      >
        <div
          class="usa-checkbox"
        >
          <input
            class="usa-checkbox__input"
            id="Nocturn Alley Nargles-remove-checkbox"
            type="checkbox"
            value=""
          />
          <label
            class="usa-checkbox__label"
            for="Nocturn Alley Nargles-remove-checkbox"
          />
        </div>
      </div>
    </div>
    <div
      class="tablet:grid-col-10 margin-top-1 margin-bottom-1"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="tablet:grid-col-6"
    >
      <h2>
        Request a new site
      </h2>
      <p
        class="usa-hint"
      >
        Fill out this section if your program manages a site not included in your ECE Reporter account.
      </p>
      <button
        class="usa-button bx--btn bx--btn--primary"
        tabindex="0"
        type="button"
      >
        Add New Site
      </button>
    </div>
    <div
      class="tablet:grid-col-6 margin-top-4 margin-bottom-4"
    >
      <hr
        class="oec-divider"
      />
    </div>
    <div
      class="tablet:grid-col-6"
    >
      <h2>
        Funding space types
      </h2>
      <p
        class="usa-hint"
      >
        Request corrections to the funding types received by your program in the section below.
      </p>
    </div>
    <div
      class="grid-row grid-gap margin-top-2 margin-bottom-2"
    >
      <a
        class="bx--link usa-button usa-button--outline"
        href="/home"
      >
        Cancel
      </a>
      <button
        class="usa-button bx--btn bx--btn--primary"
        tabindex="0"
        type="button"
      >
        Send request
      </button>
    </div>
  </div>
</DocumentFragment>
`;
